# all-my-env

./: .gitignore  README.md  docker-compose.yml  features.md  main.go
server/: Cargo.toml  Dockerdev  Dockerfile  README.md  dev.Dockerfile  docker-compose.yml  env.bash  envhub.dbml  fly.toml  go.mod  go.sum  main.go  request.http  resquest.http  schema.sql  schemas.sql
server/api/: api.go  request.go  response.go  token.go
server/api/response/: response.go
server/crypto/: cipher.go  cipher_test.go
server/database/: database.go  error.go  schemas.go  schemas_test.go
server/database/migrations/: 000001_init.down.sql  000001_init.up.sql
server/db/: db.go  schemas.go
server/db/migrations/: 000001_init.down.sql  000001_init.up.sql  000002_user.down.sql  000002_user.up.sql
server/envhubtest/: envhubtest.go
server/gh/: gh.go  mock.go  types.go
server/handlers/: router.go
server/handlers/auth/: auth.go  github.go  jwt.go  login.go  logout.go  middlewares.go  middlewares_test.go  refresh.go  refresh_test.go  services.go  tokenvalidator.go  tokenvalidator_test.go  verify.go  verify_test.go
server/handlers/repos/: all.go  all_test.go  gh_test.go  index.go  index_test.go  link.go  link_test.go  models.go  models_test.go  repos.go  types.go  unlink.go  unlink_test.go
server/jsonwebtoken/: jsonwebtoken.go  jsonwebtoken_test.go  mock.go
server/lib/: env.go  time.go
server/scripts/: go.mod  go.sum  main.go
server/src/: main.rs
server/src/features/auth/: verify.http  (+1 more)
server/src/models/: github.rs
server/src/repo/: cipher.rs  error.rs  github.rs  mod.rs
(+172 files in other folders)
