[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4"
serde = { version = "1.0.163", features = ["derive"] }
firebase-rs = { version = "2.0.6" }
reqwest = { version = "0.11.18" }
aes-gcm = { version = "0.10.2" }
hkdf = { version = "0.12.3" }
sha2 = { version = "0.10.7" }
env_logger = "0.10.0"
actix-cors = "0.6.4"
dotenv = "0.15.0"
hex = "0.4.3"
base64 = "0.21.2"
